Minikube/ingresses/control-center-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: control-center-ingress
  namespace: spring-training
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: my-spring-training.control-center
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: control-center-service
                port:
                  number: 9021
