Minikube/ingresses/sonarqube-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube-ingress
  namespace: spring-training
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: my-spring-training.sonarqube
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarqube-service
                port:
                  number: 9000
